--- a/styles/page_jeux.scss
+++ b/styles/page_jeux.scss
@@ -1,5 +1,44 @@
-.wrapper_jeux{
-    display: flex;
-    justify-content:end;
-    align-items:end;
+.wrapper_jeux {
+  display: flex;
+  justify-content: end;
+  align-items: end;
+
+}
+
+.wrapper_image {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.image-container {
+  display: flex;
+  position: relative;
+  flex-direction: row;
+}
+
+.progress_bar {
+  position: relative;
+  height: 20px; /* Hauteur de la barre de progression */
+  width: 80vw; /* Largeur de la barre de progression */
+  background-color: #eee; /* Couleur de fond de la barre de progression */
+}
+
+.progress {
+  position: absolute;
+  height: 100%;
+  width: 40%; /* Pourcentage de progression */
+  background-color: #007bff; /* Couleur de la progression */
+}
+.skull_wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.skull {
+  width: 80%;
+}
+
+.margin_background{
 }
