--- a/styles/style.scss
+++ b/styles/style.scss
@@ -94,3 +94,16 @@ form {
     display: flex;
     justify-content: center;
  }
+
+ .personnage_selection{
+  border: none;
+  background: none;
+  padding: 0;
+  margin: 0;
+  font-size: inherit;
+  font-family: inherit;
+ }
+
+.selected{
+    background-color: rgb(157, 157, 160);
+}
